cloud-sample/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: webautomation
  nameSpace: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
